--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.2",
+    "autoprefixer": "^10.4.8",
     "axios": "^0.27.2",
     "framer-motion": "^7.2.0",
+    "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "styled-components": "^5.3.5"
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
